update overall project based on clients requests

--- a/about.html
+++ b/about.html
@@ -30,84 +30,96 @@
   </div>
 </nav>
 <div class="container mx-auto px-2 bg-white mb-4">
+<div class="flex-col text-justify mx-4 my-4 break-normal rounded">
+    <h1 class="shadow-md w-full text-white tracking-widest text-center h-10 bg-green-600 my-4 p-2">
 
-    <div class="flex-col text-justify mx-4 my-4 break-normal rounded">
-        <h1 class="text-xl my-4"> Why we created it?</h1>
-        <p><span class="font-bold">Three Minute Learning </span> is a social enterprise set up to tackle a vital educational issue. One in six people in
-            the UK
-            are held back by poor literacy skills (National Literacy Trust statistics). This impairs their employability,
-            health, confidence and happiness.
-        </p>
-        <p> The problem starts very early in school, when children struggle, lag behind their peers and develop mental
-            barriers
-            to reading that grow stronger with the passing years.</p>
-        <p>It doesn't have to happen.</p>
-        <h1 class="text-xl my-4"> Active reading</h1>
-        <p>Good readers are active readers. They engage with a piece of writing in many ways, often unconsciously. Research
-            has
-            discovered these methods of engagement and shown that they can be taught and learned. Passive readers can, with
-            practice, become active readers.</p>
-        <h1 class="text-xl my-4"> Support for <span class="font-bold"> Three Minute Learning</span></h1>
-        <p> We developed 3ml with support and funding from a number of organisations, including Glasgow University, the
-            Scottish Government, the UK Space Agency, the Royal Academy of Engineering and the Science and Technologies
-            Facilities Council. We are currently supported by the Scottish Schools Education Research Centre to provide 3ml
-            to
-            all members of SSERC.
-        </p>
-        <h1 class="text-xl my-4"> How it works</h1>
-        <p>A <i>teacher account</i> - provided on request - allows access to the entire 3ml library (&gt; 1000 currently,
-            with
-            new stories being added constantly).
-            The account enables you, the teacher, to:
-        </p>
-        <ul class="list-disc list-inside leading-loose mx-8">
-            <li>create any number of pupil accounts;</li>
+
+        Aims and purpose of Three Minute Learning. How teachers and pupils can use our online App, 3ml.
+    </h1>
+    <h2 class="text-md my-4 text-tml-blue font-bold "> Why we created it?</h2>
+    <p>Three Minute Learning is a social enterprise set up to tackle a vital educational issue. One in six people in
+        the UK
+        are held back by poor literacy skills (National Literacy Trust statistics). This impairs their employability,
+        health, confidence and happiness.
+    </p>
+    <p> The problem starts very early in school, when children struggle, lag behind their peers and develop mental
+        barriers
+        to reading that grow stronger with the passing years.</p>
+    <p>It doesn't have to happen.</p>
+    <h2 class="text-md my-4 text-tml-blue font-bold"> Active reading</h2>
+    <p>Good readers are active readers. They engage with a piece of writing in many ways, often unconsciously. Research
+        has
+        discovered these methods of engagement and shown that they can be taught and learned. Passive readers can, with
+        practice, become active readers.</p>
+    <h2 class="text-md my-4 text-tml-blue font-bold"> Support for Three Minute Learning</h2>
+    <p> We developed 3ml with support and funding from a number of organisations, including Glasgow University, the
+        Scottish Government, the UK Space Agency, the Royal Academy of Engineering and the Science and Technologies
+        Facilities Council. We are currently supported by the Scottish Schools Education Research Centre to provide 3ml
+        to
+        all members of SSERC.
+    </p>
+    <h2 class="text-md my-4 text-tml-blue font-bold"> How it works</h2>
+    <p>A <i>teacher account</i> - provided on request - allows access to the entire 3ml library (&gt; 1000 currently,
+        with
+        new stories being added constantly).
+        The account enables you, the teacher, to:
+    </p>
+    <ul class="list-disc list-inside leading-loose mx-8">
+        <li>create any number of pupil accounts;</li>
         <li>collect a group of pupils into a class;</li>
-        <li>select stories around a theme and levels chosen by you, and gather them together into groups (anthologies), for
+        <li>select stories around a theme and levels chosen by you, and gather them together into groups (anthologies),
+            for
             pupils to work through;</li>
         <li>study pupil responses to assess their progress over time;</li>
         <li>delete inappropriate responses;</li>
         <li>see the leaderboard;</li>
         <li>change individual pupil passwords.</li>
         <p></p>
-        </ul>
-    
-        <p>A <i>pupil account</i> also gives access to the entire library of 3ml stories. The account enables a pupil to:
-        </p>
-        <ul class="list-disc list-inside leading-loose mx-8">
-             <li>assign stories and anthologies to their work basket;</li>
+    </ul>
+
+    <p>A <i>pupil account</i> also gives access to the entire library of 3ml stories. The account enables a pupil to:
+    </p>
+    <ul class="list-disc list-inside leading-loose mx-8">
+        <li>assign stories and anthologies to their work basket;</li>
         <li>select a story, either from the work basket or the whole library, as instructed by the teacher;</li>
         <li>read the story and do the activities;</li>
         <li>submit the responses;</li>
         <li>read colleagues' responses to the same story;</li>
         <li>see the leaderboard.</li>
-        </ul>
-       
-        <h1 class="text-xl my-4">More</h1>
-        <p>For further advice on how to use 3ml, please go to our <a href="http://www.realscience.org.uk/3ml/guidance.html">Guidance
-                page</a>.</p>
-    </div>
+    </ul>
+
+    <h2 class="text-md my-4 text-tml-blue font-bold">More</h2>
+    <p>For further advice on how to use 3ml, please go to our <a href="http://www.realscience.org.uk/3ml/guidance.html">Guidance
+            page</a>.</p>
+</div>
 </div>
 <div class="flex-1"></div>
-<footer class="bg-white w-screen">
-  <div class="container mx-auto px-2 py-2">
-    <div class="flex flex-col md:flex-row md:justify-center">
-      <div class="flex flex-row md:flex-col md:justify-between">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/stfccrop.jpg" alt="STFC">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/ssercsmaller.jpg" alt="SSERC">
-      </div>
-      <div class="flex flex-row md:flex-col md:justify-between">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/GU.jpg" alt="STFC">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/rae.png" alt="Royal academy of Engineering">
-      </div>
-      <div class="flex flex-row md:flex-col md:justify-between">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/ukspaceagency.png" alt="UK Space Agency">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/afa.jpg" alt="Awards for All">
-
-      </div>
-      <div class="flex flex-row md:flex-col md:justify-between">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/realscience.png" alt="Real Science">
-      </div>
+<footer class="bg-gray-100 w-screen">
+  <div class="container mx-auto py-2">
+      <h1 class="text-center text-sm my-4 text-tml-blue font-bold ">Contact us: <a href="mailto:admin@three-minute-learning.org"> admin@three-minute-learning.org
+        </a></h1>
+    <div class="flex flex-wrap md:flex-no-wrap items-center justify-between">
+        <div class="w-4/12 md:w-3/12 pr-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/stfccrop.jpg" alt="STFC Logo">
+        </div>
+        <div class="w-3/12 md:w-2/12 px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/ssercsmaller.jpg" alt="SSERC Logo">
+        </div>
+        <div class="w-4/12 md:w-3/12 px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/GU.jpg" alt="Glasgow University Logo">
+        </div>
+        <div class="w-3/12 md:w-2/12 md:px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/rae.png" alt="Royal academy of Engineering Logo">
+        </div>
+        <div class="w-3/12 md:w-2/12 px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/ukspaceagency.png" alt="UK Space Agency Logo">
+        </div>
+        <div class="w-3/12 md:w-2/12 px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/afa.jpg" alt="Awards for All Logo">
+        </div>
+        <div class="w-2/12 md:w-2/12 pl-4">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/realscience.png" alt="Real Science Logo">
+        </div>
     </div>
   </div>
 </footer>
