--- a/index.html
+++ b/index.html
@@ -30,29 +30,33 @@
   </div>
 </nav>
 <div class="container mx-auto px-2 bg-white mb-4">
+<div class="flex flex-wrap">
+    <h1 class="shadow-md w-full text-white tracking-widest text-center h-25 bg-green-600 my-4 p-2">
 
-    <div class="flex flex-wrap">
-        <video controls class="w-full md:w-1/2 mb-4">
-            <source src="http://www.realscience.org.uk/3ml/vids/timpeake.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <!-- Intro-->
-        <div class="text-lg text-justify w-full px-6 md:w-1/2 mb-4 flex flex-col justify-around">
-            <p class="self-stretch">
-                <span class="font-bold">3ML </span> works like this:
-            </p>
-            <p class="self-stretch">
-                First your pupils read a very short story, chosen - by you or them - from over 1000 in our library.
-                Then they complete four activities to help them understand and remember what they've read.
-            </p>
-            <p class="self-stretch">
-                If you haven't used 3ml before with your pupils, please take a look at the short videos on our Guidance
-                page.
-            </p>
-        </div>
-        <!-- Sign up Banner -->
-        <div class="w-full mb-4">
-            <div class="shadow-lg text-white tracking-widest text-center h-24 rounded bg-auto p-6" style="background-image: url('https://images.nasa.gov/images/landing_bg.jpg')">
+        Three Minute Learning is a social enterprise set up to improve literacy and promote real science in schools.
+    </h1>
+    <video controls class="w-full md:w-1/2 mb-4">
+        <source src="http://www.realscience.org.uk/3ml/vids/timpeake.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <!-- Intro-->
+    <div class="text-lg text-justify w-full px-4 md:w-1/2 mt-4 mb-4">
+        <p class="mb-3">
+            <span class="font-bold">3ml </span> works like this:
+        </p>
+        <p class="mb-3">
+            First your pupils read a very short story, chosen - by you or them - from over 1000 in our library.
+            Then they complete four activities to help them understand and remember what they've read.
+        </p>
+        <p>
+            If you haven't used 3ml before with your pupils, please take a look at the short videos on our Guidance
+            page.
+        </p>
+    </div>
+    <!-- Sign up Banner -->
+    <div class="w-full mb-4">
+        <a href="https://3ml.org.uk/#/register" target="_blank" rel="noopener noreferrer">
+            <div class="shadow-lg text-white tracking-widest text-center h-24 rounded bg-auto p-6 hover:bg-tml-blue" style="background-image: url('https://images.nasa.gov/images/landing_bg.jpg')">
                 <h1 class="shadow">
                     Sign up and try it out!
                 </h1>
@@ -60,97 +64,61 @@
                     It is free to all SSERC member schools.
                 </p>
             </div>
-        </div>
-        <!-- Sample Stories-->
-        <div id="storytiles" class="flex flex-wrap -mx-1">
-            <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/1142" class="block shadow w-full h-full p-1"
-                    style="background-image: url(&quot;https://3ml.org.uk/thumbs/senseofcertainty.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                    title="Where I belong">
-                    <h3 class="text-sm font-bold text-white ">Where I belong</h3>
-                </a></div>
-            <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/902" class="block shadow w-full h-full p-1"
-                    style="background-image: url(&quot;https://3ml.org.uk/thumbs/585ab148dc6df.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                    title="Young dreams">
-                    <h3 class="text-sm font-bold text-white ">Young dreams</h3>
-                </a></div>
-            <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/901" class="block shadow w-full h-full p-1"
-                    style="background-image: url(&quot;https://3ml.org.uk/thumbs/5857d71de9331.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                    title="Atom bomb vs volcano">
-                    <h3 class="text-sm font-bold text-white ">Atom bomb vs volcano</h3>
-                </a></div>
-            <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/897" class="block shadow w-full h-full p-1"
-                    style="background-image: url(&quot;https://3ml.org.uk/thumbs/5857d12062485.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                    title="Dog TV">
-                    <h3 class="text-sm font-bold text-white ">Dog TV</h3>
-                </a></div>
-            <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/892" class="block shadow w-full h-full p-1"
-                    style="background-image: url(&quot;https://3ml.org.uk/thumbs/5852d393a64a4.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                    title="Apprentice engineer">
-                    <h3 class="text-sm font-bold text-white ">Apprentice engineer</h3>
-                </a></div>
-            <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/876" class="block shadow w-full h-full p-1"
-                    style="background-image: url(&quot;https://3ml.org.uk/thumbs/57cf2264371b8.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                    title="Under the sea">
-                    <h3 class="text-sm font-bold text-white ">Under the sea</h3>
-                </a></div>
-            <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/864" class="block shadow w-full h-full p-1"
-                    style="background-image: url(&quot;https://3ml.org.uk/thumbs/57cc899bda43d.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                    title="Hardy Martians">
-                    <h3 class="text-sm font-bold text-white ">Hardy Martians</h3>
-                </a></div>
-            <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/860" class="block shadow w-full h-full p-1"
-                    style="background-image: url(&quot;https://3ml.org.uk/thumbs/57cefbd82a024.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                    title="Tough guys in space">
-                    <h3 class="text-sm font-bold text-white ">Tough guys in space</h3>
-                </a>
-            </div>
-            <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/799" class="block shadow w-full h-full p-1"
-                    style="background-image: url(&quot;https://3ml.org.uk/thumbs/575fc893a139c.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                    title="No cat names">
-                    <h3 class="text-sm font-bold text-white ">No cat names</h3>
-                </a>
-            </div>
-            <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/796" class="block shadow w-full h-full p-1"
-                    style="background-image: url(&quot;https://3ml.org.uk/thumbs/575e78f9914b9.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                    title="No more gold and silver">
-                    <h3 class="text-sm font-bold text-white ">No more gold and silver</h3>
-                </a>
-            </div>
-            <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/646" class="block shadow w-full h-full p-1"
-                    style="background-image: url(&quot;https://3ml.org.uk/thumbs/56a63c1e80b76.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                    title="Fast-moving space station">
-                    <h3 class="text-sm font-bold text-white ">Fast-moving space station</h3>
-                </a>
-            </div>
-            <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/594" class="block shadow w-full h-full p-1"
-                    style="background-image: url(&quot;https://3ml.org.uk/thumbs/57d025ac547bb.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-                    title="Are they weightless?">
-                    <h3 class="text-sm font-bold text-white ">Are they weightless?</h3>
-                </a>
-            </div>
+        </a>
+    </div>
+    <!-- Sample Stories-->
+    <div id="storytiles" class="flex flex-wrap w-full -mx-1">
+        <div class="w-1/2 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/1142" class="block shadow w-full h-full p-1"
+                style="background-image: url(&quot;https://3ml.org.uk/thumbs/senseofcertainty.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
+                title="Where I belong">
+                <h3 class="text-sm font-bold text-white ">Where I belong</h3>
+            </a></div>
+        <div class="w-1/2 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/902" class="block shadow w-full h-full p-1"
+                style="background-image: url(&quot;https://3ml.org.uk/thumbs/585ab148dc6df.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
+                title="Young dreams">
+                <h3 class="text-sm font-bold text-white ">Young dreams</h3>
+            </a></div>
+        <div class="w-1/2 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/901" class="block shadow w-full h-full p-1"
+                style="background-image: url(&quot;https://3ml.org.uk/thumbs/5857d71de9331.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
+                title="Atom bomb vs volcano">
+                <h3 class="text-sm font-bold text-white ">Atom bomb vs volcano</h3>
+            </a></div>
+        <div class="w-1/2 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/897" class="block shadow w-full h-full p-1"
+                style="background-image: url(&quot;https://3ml.org.uk/thumbs/5857d12062485.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
+                title="Dog TV">
+                <h3 class="text-sm font-bold text-white ">Dog TV</h3>
+            </a>
         </div>
     </div>
 </div>
+</div>
 <div class="flex-1"></div>
-<footer class="bg-white w-screen">
-  <div class="container mx-auto px-2 py-2">
-    <div class="flex flex-col md:flex-row md:justify-center">
-      <div class="flex flex-row md:flex-col md:justify-between">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/stfccrop.jpg" alt="STFC">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/ssercsmaller.jpg" alt="SSERC">
-      </div>
-      <div class="flex flex-row md:flex-col md:justify-between">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/GU.jpg" alt="STFC">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/rae.png" alt="Royal academy of Engineering">
-      </div>
-      <div class="flex flex-row md:flex-col md:justify-between">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/ukspaceagency.png" alt="UK Space Agency">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/afa.jpg" alt="Awards for All">
-
-      </div>
-      <div class="flex flex-row md:flex-col md:justify-between">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/realscience.png" alt="Real Science">
-      </div>
+<footer class="bg-gray-100 w-screen">
+  <div class="container mx-auto py-2">
+      <h1 class="text-center text-sm my-4 text-tml-blue font-bold ">Contact us: <a href="mailto:admin@three-minute-learning.org"> admin@three-minute-learning.org
+        </a></h1>
+    <div class="flex flex-wrap md:flex-no-wrap items-center justify-between">
+        <div class="w-4/12 md:w-3/12 pr-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/stfccrop.jpg" alt="STFC Logo">
+        </div>
+        <div class="w-3/12 md:w-2/12 px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/ssercsmaller.jpg" alt="SSERC Logo">
+        </div>
+        <div class="w-4/12 md:w-3/12 px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/GU.jpg" alt="Glasgow University Logo">
+        </div>
+        <div class="w-3/12 md:w-2/12 md:px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/rae.png" alt="Royal academy of Engineering Logo">
+        </div>
+        <div class="w-3/12 md:w-2/12 px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/ukspaceagency.png" alt="UK Space Agency Logo">
+        </div>
+        <div class="w-3/12 md:w-2/12 px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/afa.jpg" alt="Awards for All Logo">
+        </div>
+        <div class="w-2/12 md:w-2/12 pl-4">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/realscience.png" alt="Real Science Logo">
+        </div>
     </div>
   </div>
 </footer>
