--- a/resources.html
+++ b/resources.html
@@ -31,6 +31,9 @@
 </nav>
 <div class="container mx-auto px-2 bg-white mb-4">
 <div class="w-2/3 mx-auto">
+    <h1 class="shadow-md w-full text-white tracking-widest text-center h-15 bg-green-600 my-4 p-2">
+        On this page we provide links to pdf files of the review questions for anthologies.
+    </h1>
     <div class="bg-white shadow-md rounded my-6">
         <h3 class="shadow-lg text-white tracking-widest text-left h-10 bg-tml-blue my-4 p-2">
             Review questions - curriculum topics
@@ -83,7 +86,7 @@
                     <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
                         Jane Goodall is the world's leading expert on wild chimpanzees.</td>
                     <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
-                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJaneGoodall.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">Jane
+                        <a  href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJaneGoodall.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">Jane
                             Goodall</a>
                     </td>
                 </tr>
@@ -95,7 +98,7 @@
                         Dawn is a scientist at Daresbury Laboratory. (But take a look at her story 'The
                         In-betweeners'.)</td>
                     <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
-                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsDawnGeatches.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">Dawn
+                        <a  href="http://www.realscience.org.uk/3ml/pdfs/QuestionsDawnGeatches.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">Dawn
                             Geatches</a>
                     </td>
                 </tr>
@@ -106,7 +109,7 @@
                     <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
                         Valeria is a scientist at Daresbury Laboratory.</td>
                     <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
-                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsValeriaLosasso.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">Valeria
+                        <a  href="http://www.realscience.org.uk/3ml/pdfs/QuestionsValeriaLosasso.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">Valeria
                             Losasso</a>
                     </td>
                 </tr>
@@ -117,7 +120,7 @@
                     <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
                         James is an engineer at Daresbury Laboratory.</td>
                     <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
-                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJamesWilson.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">James
+                        <a  href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJamesWilson.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">James
                             Wilson</a>
                     </td>
                 </tr>
@@ -128,7 +131,7 @@
                     <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
                         James is a computer scientist at Daresbury Laboratory.</td>
                     <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
-                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJamesGebbie.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">James
+                        <a  href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJamesGebbie.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">James
                             Gebbie</a>
                     </td>
                 </tr>
@@ -139,7 +142,7 @@
                     <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
                         Chris is an astronomer at RAL Space.</td>
                     <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
-                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsChrisPearson.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">Chris
+                        <a  href="http://www.realscience.org.uk/3ml/pdfs/QuestionsChrisPearson.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">Chris
                             Pearson</a>
                     </td>
                 </tr>
@@ -149,25 +152,32 @@
 </div>
 </div>
 <div class="flex-1"></div>
-<footer class="bg-white w-screen">
-  <div class="container mx-auto px-2 py-2">
-    <div class="flex flex-col md:flex-row md:justify-center">
-      <div class="flex flex-row md:flex-col md:justify-between">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/stfccrop.jpg" alt="STFC">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/ssercsmaller.jpg" alt="SSERC">
-      </div>
-      <div class="flex flex-row md:flex-col md:justify-between">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/GU.jpg" alt="STFC">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/rae.png" alt="Royal academy of Engineering">
-      </div>
-      <div class="flex flex-row md:flex-col md:justify-between">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/ukspaceagency.png" alt="UK Space Agency">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/afa.jpg" alt="Awards for All">
-
-      </div>
-      <div class="flex flex-row md:flex-col md:justify-between">
-        <img class="px-2 object-scale-down w-40" src="http://www.realscience.org.uk/3ml/img/realscience.png" alt="Real Science">
-      </div>
+<footer class="bg-gray-100 w-screen">
+  <div class="container mx-auto py-2">
+      <h1 class="text-center text-sm my-4 text-tml-blue font-bold ">Contact us: <a href="mailto:admin@three-minute-learning.org"> admin@three-minute-learning.org
+        </a></h1>
+    <div class="flex flex-wrap md:flex-no-wrap items-center justify-between">
+        <div class="w-4/12 md:w-3/12 pr-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/stfccrop.jpg" alt="STFC Logo">
+        </div>
+        <div class="w-3/12 md:w-2/12 px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/ssercsmaller.jpg" alt="SSERC Logo">
+        </div>
+        <div class="w-4/12 md:w-3/12 px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/GU.jpg" alt="Glasgow University Logo">
+        </div>
+        <div class="w-3/12 md:w-2/12 md:px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/rae.png" alt="Royal academy of Engineering Logo">
+        </div>
+        <div class="w-3/12 md:w-2/12 px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/ukspaceagency.png" alt="UK Space Agency Logo">
+        </div>
+        <div class="w-3/12 md:w-2/12 px-2">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/afa.jpg" alt="Awards for All Logo">
+        </div>
+        <div class="w-2/12 md:w-2/12 pl-4">
+          <img class="object-scale-down mx-auto" src="http://www.realscience.org.uk/3ml/img/realscience.png" alt="Real Science Logo">
+        </div>
     </div>
   </div>
 </footer>
