--- a/guidance.html
+++ b/guidance.html
@@ -24,7 +24,7 @@
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="about.html">About</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="guidance.html">Guidance</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="resources.html">Resources</a>
-        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="https://3ml.org.uk/">3ML App</a>
+        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="https://3ml.org.uk/">3mlApp</a>
       </div>
     </div>
   </div>
