--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="about.html">About</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="guidance.html">Guidance</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="resources.html">Resources</a>
-        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="https://3ml.org.uk/">3ML App</a>
+        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="https://3ml.org.uk/">3mlApp</a>
       </div>
     </div>
   </div>
@@ -56,7 +56,8 @@
     <!-- Sign up Banner -->
     <div class="w-full mb-4">
         <a href="https://3ml.org.uk/#/register" target="_blank" rel="noopener noreferrer">
-            <div class="shadow-lg text-white tracking-widest text-center h-24 rounded bg-auto p-6 hover:bg-tml-blue" style="background-image: url('https://images.nasa.gov/images/landing_bg.jpg')">
+            <div class="shadow-lg text-white tracking-widest text-center h-24 rounded bg-auto p-6 hover:bg-tml-blue"
+                style="background-image: url('https://images.nasa.gov/images/landing_bg.jpg')">
                 <h1 class="shadow">
                     Sign up and try it out!
                 </h1>
