--- a/resources.html
+++ b/resources.html
@@ -60,7 +60,7 @@
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/janethumb2.jpg')" title="Jane Goodall">
                 </div>
                 <div class="w-full border-b border-gray-400 border-t bg-white rounded-b p-4 flex  flex -col justify-center leading-normal">
-                    <div class="mb-2 w-full text-left text-grey-lighter py-1 px-3 rounded text-md bg-green hover:text-tml-blue">
+                    <div class="mb-2 w-full text-left text-grey-lighter self-center py-1 px-3 rounded text-md bg-green hover:text-tml-blue">
                         Jane Goodall is the world's leading expert on wild chimpanzees.</div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/dawnthumb.jpg')" title="Dawn Geatches">
                 </div>
                 <div class="w-full border-b border-gray-400 border-t bg-white rounded-b p-4 flex  flex -col justify-center leading-normal">
-                    <div class="mb-2 w-full text-left text-grey-lighter py-1 px-3 rounded text-md bg-green hover:text-tml-blue">
+                    <div class="mb-2 w-full text-left text-grey-lighter self-center py-1 px-3 rounded text-md bg-green hover:text-tml-blue">
                         Dawn Geatches is a scientist at Daresbury Laboratory. (Take a look at her story 'The
                         In-betweeners'.)</div>
                 </div>
@@ -83,7 +83,7 @@
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/valeriathumb.jpg')" title="Valeria Losasso">
                 </div>
                 <div class="w-full border-b border-gray-400 border-t bg-white rounded-b p-4 flex  flex -col justify-center leading-normal">
-                    <div class="mb-2 w-full text-left text-grey-lighter py-1 px-3 rounded text-md bg-green hover:text-tml-blue">
+                    <div class="mb-2 w-full text-left text-grey-lighter self-center py-1 px-3 rounded text-md bg-green hover:text-tml-blue">
                         Valeria Losasso is a scientist at Daresbury Laboratory.</div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/jameswilsonthumb.jpg')" title="Valeria Losasso">
                 </div>
                 <div class="w-full border-b border-gray-400 border-t bg-white rounded-b p-4 flex  flex -col justify-center leading-normal">
-                    <div class="mb-2 w-full text-left text-grey-lighter py-1 px-3 rounded text-md bg-green hover:text-tml-blue">
+                    <div class="mb-2 w-full text-left text-grey-lighter self-center py-1 px-3 rounded text-md bg-green hover:text-tml-blue">
                             James Wilson is an engineer at Daresbury Laboratory.</div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/jamesgebbiethumb.jpg')" title="Valeria Losasso">
                 </div>
                 <div class="w-full border-b border-gray-400 border-t bg-white rounded-b p-4 flex  flex -col justify-center leading-normal">
-                    <div class="mb-2 w-full text-left text-grey-lighter py-1 px-3 rounded text-md bg-green hover:text-tml-blue">
+                    <div class="mb-2 w-full text-left text-grey-lighter self-center py-1 px-3 rounded text-md bg-green hover:text-tml-blue">
                             James Gebbie is a computer scientist at Daresbury Laboratory.</div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                     style="background-image: url('http://www.realscience.org.uk/3ml/img/chrispearsonthumb.jpg')" title="Valeria Losasso">
                 </div>
                 <div class="w-full border-b border-gray-400 border-t bg-white rounded-b p-4 flex  flex -col justify-center leading-normal">
-                    <div class="mb-2 w-full text-left text-grey-lighter py-1 px-3 rounded text-md bg-green hover:text-tml-blue">
+                    <div class="mb-2 w-full text-left text-grey-lighter self-center py-1 px-3 rounded text-md bg-green hover:text-tml-blue">
                             Chris Pearson is an astronomer at RAL Space.</div>
                 </div>
             </div>
